test vk video 3

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 								src="https://vkvideo.ru/video_ext.php?oid=-218565915&id=456240708&hd=2&autoplay=1"
 								width="853"
 								height="480"
-								allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;"
+								allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;"
 								frameborder="0"
 								allowfullscreen></iframe>
 						</div>
