--- a/index.html
+++ b/index.html
@@ -164,6 +164,16 @@
 								allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;"
 								frameborder="0"
 								allowfullscreen></iframe>
+							<!-- <iframe
+								class="vk-video"
+								width="560"
+								height="1000"
+								src="https://www.youtube.com/embed/PPcZk813bdQ?si=XvMAef-D7kI181ue"
+								title="YouTube video player"
+								frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+								referrerpolicy="strict-origin-when-cross-origin"
+								allowfullscreen></iframe> -->
 						</div>
 					</div>
 				</div>
