test vk video 5

--- a/index.html
+++ b/index.html
@@ -152,28 +152,24 @@
 								muted
 								loop></video> -->
 							<!-- <iframe
-								src="./media/video/welcome.mp4"
-								frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-								allowfullscreen></iframe> -->
-							<iframe
-								class="vk-video"
-								src="https://vkvideo.ru/video_ext.php?oid=-218565915&id=456240708&hd=2&autoplay=1"
-								width="853"
-								height="480"
-								allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;"
-								frameborder="0"
-								allowfullscreen></iframe>
-							<!-- <iframe
 								class="vk-video"
 								width="560"
 								height="1000"
 								src="https://www.youtube.com/embed/PPcZk813bdQ?si=XvMAef-D7kI181ue"
-								title="YouTube video player"
+								data-logo-src="./media/img/slide-1.jpg"
 								frameborder="0"
 								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 								referrerpolicy="strict-origin-when-cross-origin"
 								allowfullscreen></iframe> -->
+							<iframe
+								class="vk-video"
+								data-logo-src="./media/img/slide-1.jpg"
+								src="https://vkvideo.ru/video_ext.php?oid=-217327231&id=456239214&hd=2&autoplay=1"
+								width="853"
+								height="480"
+								allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;"
+								frameborder="0"
+								allowfullscreen></iframe>
 						</div>
 					</div>
 				</div>
